--- a/html.html
+++ b/html.html
@@ -6,7 +6,7 @@
         <div class="bg">
             <div class="neck">
                <div class="large">
-                   <div class="vert"></div>
+                   <div class="vertic"></div>
                </div>
                <div class="small">
                    <div class="bgcircle">
